feat: remove languageDetect & add react-toastify

--- a/src/i18n/locales/kz/translation.json
+++ b/src/i18n/locales/kz/translation.json
@@ -22,5 +22,8 @@
   "answer_2": "Жұбайыммен келемін",
   "answer_3": "Өкінішке орай, келе алмаймын",
   "submit": "Жауапты жіберу",
-  "submitting": "Жүктелуде..."
+  "submitting": "Жүктелуде...",
+  "form_success": "Жауабыңыз сәтті жіберілді!",
+  "form_required": "Аты-жөніңізді толық жіберіңіз",
+  "form_error": "Белгісіз ақау! Кейін қайта жіберуіңізді сұраймыз"
 }
