--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -23,5 +23,8 @@
   "answer_2": "Приду с супругом(ой)",
   "answer_3": "К сожалению, не смогу прийти",
   "submit": "Отправить ответ",
-  "submitting": "Отправляется..."
+  "submitting": "Отправляется...",
+  "form_success": "Ответ успешно отправлен!",
+  "form_required": "Заполните все поля для отправки ответа",
+  "form_error": "Неизвестная ошибка! Пожалуйста повторите позже"
 }
